apps/docs/src/app/v1/components/mui/RHFNativeSelect/page.mdx
import { DocsPage, PropsTable, Callout } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFNativeSelect;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFNativeSelect

**RHFNativeSelect** extends [NativeSelect](https://v5.mui.com/material-ui/react-select/#native-select)
and is ideal for mobile-friendly form designs. Similar to [RHFSelect](/v1/components/mui/RHFSelect),
it supports both arrays and arrays of objects for flexible option rendering.

## Usage

```tsx
import RHFNativeSelect, { RHFNativeSelectProps } from '@nish1896/rhf-mui-components/mui/native-select';
```

Here's a basic example with an array of strings:

```tsx
<RHFNativeSelect
  fieldName="color"
  register={register}
  options={['Red', 'Blue', 'Orange']}
  errorMessage={errors?.color?.message}
/>
```

And with an array of objects:

```tsx
<RHFNativeSelect
  fieldName="country"
  register={register}
  options={[
    { code: 'AUS', country: 'Australia' },
    { code: 'IN', country: 'India' },
    { code: 'UAE', country: 'United Arab Emirates' },
  ]}
  labelKey="country"
  valueKey="code"
  errorMessage={errors?.country?.message}
/>
```

<Callout type="warning">
When using an array of objects for options, both `labelKey` and `valueKey`
are required. If either is missing, an error will be thrown.
</Callout>

## API
The `RHFNativeSelectProps` interface extends [NativeSelectProps](https://v5.mui.com/material-ui/api/native-select/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFNativeSelect}
  docsVersion={1}
  muiVersion={5}
  v1
/>
